--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "multer": "^1.4.5-lts.1"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "build": "npm run build"
   }
 }
