--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,6 @@
     "multer": "^1.4.5-lts.1"
   },
   "scripts": {
-    "start": "nodemon server.js",
-    "build": "npm run build"
+    "start": "node server.js"
   }
 }
